added animation to projects page

--- a/app/globals.css
+++ b/app/globals.css
@@ -171,4 +171,24 @@ body {
     background-position: center;
     will-change: transform, opacity;
   }
+
+  @keyframes marquee {
+    0% {
+      transform: translateX(100vw);
+    }
+
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+
+  .animate-marquee {
+    display: flex;
+    width: max-content;
+    animation: marquee 12s linear infinite;
+  }
+
+  .animate-marquee:hover {
+    animation-play-state: paused;
+  }
 }
